removed code duplication