@@ -7,7 +7,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.Token;
@@ -785,19 +784,9 @@ public class ValueExpr extends AbstractExpr {
             return;
         }
 
-        String s;
-        TerminalNode codeStart = strCtx.Character_String_Literal();
-        if (codeStart != null) {
-            // TODO support special escaping schemes (maybe in the util itself)
-            s = PgDiffUtils.unquoteQuotedString(codeStart.getText());
-        } else {
-            List<TerminalNode> dollarText = strCtx.Text_between_Dollar();
-            codeStart = dollarText.get(0);
-            s = dollarText.stream()
-                    .map(TerminalNode::getText)
-                    .collect(Collectors.joining());
-        }
-        Token start = codeStart.getSymbol();
+        Pair<String, Token> pair = ParserAbstract.unquoteQuotedString(strCtx);
+        String s = pair.getFirst();
+        Token start = pair.getSecond();
 
         switch (regcast) {
         case "regproc":
